objects/adapps__OptimizerPlus_Details_Tabs_Pages_Item__c.object
<CustomObject>
    <fields>
        <fullName>adapps__Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>adapps__Details_Tabs_Record_Pages__c</fullName>
        <label>Details Tabs on Record Pages</label>
        <referenceTo>adapps__OptimizerPlus_Details_Tabs_Pages__c</referenceTo>
        <relationshipLabel>Details Tabs Record Pages Items</relationshipLabel>
        <relationshipName>Details_Tabs_Record_Pages_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>adapps__FlexiPage__c</fullName>
        <label>FlexiPage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__Percentage__c</fullName>
        <label>Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>adapps__Status__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__Url__c</fullName>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <label>Detail Tab Record Page Item</label>
    <nameField>
        <label>Field Limit Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Details Tabs Record Pages Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>